--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
       <div class="jumbotron">
         <h1>'Allo, 'Allo!</h1>
         <p class="lead">Always a pleasure scaffolding your apps.</p>
-        <p><a class="btn btn-lg btn-success" href="">Splendid! <span class="glyphicon glyphicon-ok"></span></a></p>
-        <p>Dit is een test!</p>
+        <p><a class="btn btn-lg btn-success" href="http://www.facebook.com">Splendid! <span class="glyphicon glyphicon-ok"></span></a></p>
+        <p>Test Test Test Test</p>
       </div>
 
       <div class="row marketing">
