dit is een aanpassing

--- a/public/index.html
+++ b/public/index.html
@@ -33,10 +33,10 @@
       </div>
 
       <div class="jumbotron">
-        <h1>'Allo, 'Allo!</h1>
+        <h1>'Hallo, 'Hallo!</h1>
         <p class="lead">Always a pleasure scaffolding your apps.</p>
         <p><a class="btn btn-lg btn-success" href="#">Splendid! <span class="glyphicon glyphicon-ok"></span></a></p>
-        <p>Hallo dit is een aanpassing!!!!!!!!!</p>
+        <p>Dit is een test</p>
       </div>
 
       <div class="row marketing">
