--- a/public/index.html
+++ b/public/index.html
@@ -33,10 +33,9 @@
       </div>
 
       <div class="jumbotron">
-        <h1>Hoi Jan alles lekka?</h1>
+        <h1>Jo Jan, alles lekka dan?</h1>
         <p class="lead">Always a pleasure scaffolding your apps.</p>
         <p><a class="btn btn-lg btn-success" href="#">Splendid! <span class="glyphicon glyphicon-ok"></span></a></p>
-        <p>Dit is een test</p>
       </div>
 
       <div class="row marketing">
