--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
       </div>
 
       <div class="jumbotron">
-        <h1>Hoi Jan, Alles goed?</h1>
+        <h1>Jo ro alles lekka dan?</h1>
         <p class="lead">Always a pleasure scaffolding your apps.</p>
         <p><a class="btn btn-lg btn-success" href="#">Splendid! <span class="glyphicon glyphicon-ok"></span></a></p>
       </div>
