--- a/public/index.html
+++ b/public/index.html
@@ -29,11 +29,11 @@
           <li><a href="#">About</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
-        <h3 class="text-muted">prototyping sucks2</h3>
+        <img src="images/logo.png" alt="logo" />
       </div>
 
       <div class="jumbotron">
-        <h1>Hoooooooi </h1>
+        <h1>Hallo hallo </h1>
         <p class="lead">Always a pleasure scaffolding your apps.</p>
         <p><a class="btn btn-lg btn-success" href="#">Splendid! <span class="glyphicon glyphicon-ok"></span></a></p>
       </div>
