--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
           <li><a href="#">About</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
-        <img src="images/logo.png" alt="logo" />
+        <img src="images/logo_2.png" alt="logo" />
       </div>
 
       <div class="jumbotron">
