--- a/public/index.html
+++ b/public/index.html
@@ -33,9 +33,7 @@
       </div>
 
       <div class="jumbotron">
-        <h1>Hallo hallo </h1>
-        <p class="lead">Always a pleasure scaffolding your apps.</p>
-        <p><a class="btn btn-lg btn-success" href="#">Splendid! <span class="glyphicon glyphicon-ok"></span></a></p>
+		<img src="images/header2.jpg" alt="header" />
       </div>
 
       <div class="row marketing">
