--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
         <img src="images/logo_2.png" alt="logo" />
       </div>
 
-      <div class="jumbotron">
+      <div>
 		<img src="images/header2.jpg" alt="header" />
       </div>
 
