--- a/public/index.html
+++ b/public/index.html
@@ -29,10 +29,12 @@
           <li><a href="#">About</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
+        <div class="col-md-6">
         <img src="images/logo_2.png" alt="logo" />
+        </div>
       </div>
 
-      <div>
+      <div class="col-md-12">
 		<img src="images/header2.jpg" alt="header" />
       </div>
 
