--- a/public/index.html
+++ b/public/index.html
@@ -22,17 +22,18 @@
     <![endif]-->
 
 
-    <div class="container">
-      <div class="header">
-        <ul class="nav nav-pills pull-right">
-          <li class="active"><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-        <div class="col-md-6">
-        <img src="images/logo_2.png" alt="logo" />
-        </div>
-      </div>
+    <div class="row">
+    	<div class="col-md-6">
+       	 <ul class="nav nav-pills pull-right">
+          	<li class="active"><a href="#">Home</a></li>
+          	<li><a href="#">About</a></li>
+          	<li><a href="#">Contact</a></li>
+       	 </ul>
+    	</div>
+    	<div class="col-md-6">
+        	<img src="images/logo_2.png" alt="logo" />
+		</div>
+	</div>
 
       <div class="col-md-12">
 		<img src="images/header2.jpg" alt="header" />
