--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,29 @@
       <div>
 		<img src="images/header2.jpg" alt="header" />
       </div>
+	
+	<div class="row">
+		<div class="col-md-6">
+			<img src="images/product1.jpg" alt="header" />
+		</div>
+		
+		<div class="col-md-6">
+			<img src="images/product2.jpg" alt="header" />
+		</div>
+	</div>
+
+
+	<div class="row">
+		<div class="col-md-6">
+			<img src="images/product3.jpg" alt="header" />
+		</div>
+		
+		<div class="col-md-6">
+			<img src="images/product4.jpg" alt="header" />
+		</div>
+	</div>
+	
+
 
       <div class="row marketing">
         <div class="col-lg-6">
