afbeeldingen home en css

--- a/public/index.html
+++ b/public/index.html
@@ -29,20 +29,20 @@
           <li><a href="#">About</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
-        <img src="images/logo_2.png" alt="logo" class="img-responsive" />
+        <img src="images/logo_2.png" alt="logo" class="img-responsive afb" />
       </div>
 
       <div>
-		<img src="images/header2.jpg" alt="header" class="img-responsive" />
+		<img src="images/header2.jpg" alt="header" class="img-responsive afb" />
       </div>
 	
 	<div class="row">
 		<div class="col-md-6">
-			<img src="images/product1.jpg" alt="header" class="img-responsive"/>
+			<img src="images/product1.jpg" alt="header" class="img-responsive afb"/>
 		</div>
 		
 		<div class="col-md-6">
-			<img src="images/product2.jpg" alt="header" class="img-responsive"/>
+			<img src="images/product2.jpg" alt="header" class="img-responsive afb"/>
 		</div>
 	</div>
 
