--- a/public/index.html
+++ b/public/index.html
@@ -29,11 +29,11 @@
           <li><a href="#">About</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
-        <img src="images/logo_2.png" alt="logo" class="img-responsive afb" />
+        <img src="images/logo_2.png" alt="logo" />
       </div>
 
       <div>
-		<img src="images/header2.jpg" alt="header" class="img-responsive afb" />
+		<img src="images/header2.jpg" alt="header" />
       </div>
 	
 	<div class="row">
@@ -49,11 +49,11 @@
 
 	<div class="row">
 		<div class="col-md-6">
-			<img src="images/product3.jpg" alt="header" />
+			<img src="images/product3.jpg" alt="header" class="img-responsive afb"/>
 		</div>
 		
 		<div class="col-md-6">
-			<img src="images/product4.jpg" alt="header" />
+			<img src="images/product4.jpg" alt="header" class="img-responsive afb"/>
 		</div>
 	</div>
 	
