--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,7 @@
       </div>
 	
 	<div class="row">
+	<h1>Producten</h1>
 		<div class="col-md-6">
 			<img src="images/product1.jpg" alt="header" class="img-responsive afb"/>
 		</div>
