--- a/public/product.html
+++ b/public/product.html
@@ -13,7 +13,7 @@
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
   </head>
   <body>
@@ -26,59 +26,41 @@
       <div class="header">
         <ul class="nav nav-pills pull-right">
           <li class="active"><a href="#">Home</a></li>
-          <li><a href="product.html">Product</a></li>
+          <li><a href="#">About</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
-        <img src="images/logo_2.png" alt="logo" />
+        <img src="images/logo_2.png" alt="logo" class="img-responsive">
       </div>
 
-      <div>
-		<img src="images/header2.jpg" alt="header" />
+      <div class="jumbotron">
+        <img src="images/header2.jpg" alt="header" class="img-responsive">
       </div>
-	<h1>Producten</h1>
-	<div class="row">
-		<div class="col-md-6">
-			<img src="images/product1.jpg" alt="header" class="img-responsive afb"/>
-		</div>
-		
-		<div class="col-md-6">
-			<img src="images/product2.jpg" alt="header" class="img-responsive afb"/>
-		</div>
-	</div>
+      <div class="row">
 
-
-	<div class="row">
-		<div class="col-md-6">
-			<img src="images/product3.jpg" alt="header" class="img-responsive afb"/>
+      	<div class="col-md-6">
+			<img src="images/product1.jpg" alt="header" class="img-responsive afb">
 		</div>
-		
-		<div class="col-md-6">
-			<img src="images/product4.jpg" alt="header" class="img-responsive afb"/>
-		</div>
-	</div>
-	
 
+		<div class="col-md-6">
+
+			<p> De Kärcher hogedrukreiniger K2 Home is uitgerust met een spuitpistool, twee lichtlopende wielen, een 4 meter lange hogedrukslang, een spuitlans, een vuilfrees met roterende puntstraal voor de verwijdering van hardnekkige vervuiling en een waterfilter voor de bescherming van de pomp. 
+
+De extra Home Kit garandeert een spatvrije reiniging van grote oppervlakken rondom het huis en omvat de T50 oppervlaktereiniger en het reinigingsmiddel Patio & Deck in een 500ml opvouwbare verpakking. Deze hogedrukreiniger is ideaal voor de verwijdering van normale vervuiling en voor een occasioneel gebruik rondom het huis van onder meer fietsen, tuingereedschap en tuinmeubelen.
+			</p> 
+
+		</div>
+
+	  </div>	
 
       <div class="row marketing">
         <div class="col-lg-6">
-          <form action="/createKitten">
+          <form>
             <div class="form-group">
-              <label for="exampleInputEmail1">Cat Name</label>
-              <input type="text" class="form-control" id="katNameInput" name="katName" placeholder="Enter katname">
+              <label for="exampleInputEmail1">E-mail</label>
+              <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
             </div>
-            <button type="submit" class="btn btn-default">Submit</button>
+            <button type="submit" class="btn btn-default">Reserveer</button>
           </form>
-          <table id="table" class="table table-striped">
-              <thead>
-                <th>#</th>
-                <td>Name</td>
-              </thead>
-
-          </table>
-          <h4>HTML5 Boilerplate</h4>
-          <p>HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.</p>
-          <h4>Bootstrap</h4>
-          <p>Sleek, intuitive, and powerful mobile first front-end framework for faster and easier web development.</p>
 
 
         </div>
@@ -89,6 +71,8 @@
       </div>
 
     </div>
+
+
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
@@ -109,13 +93,5 @@
         <script src="bower_components/bootstrap/js/collapse.js"></script>
         <script src="bower_components/bootstrap/js/tab.js"></script>
         <!-- endbuild -->
-
-<script>
-  $.get( "/getkitten", function( data ) {
-
-  $.each(data, function(i, val){
-       $( "#table" ).append( "<tr><td>"+ i +"</td><td>"+val['name']+"</td></tr>");
-  });
-});</script>
 </body>
 </html>
