--- a/public/product.html
+++ b/public/product.html
@@ -25,16 +25,14 @@
     <div class="container">
       <div class="header">
         <ul class="nav nav-pills pull-right">
-          <li class="active"><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="#">Home</a></li>
+          <li class="active"><a href="#">Product</a></li>
         </ul>
         <img src="images/logo_2.png" alt="logo" class="img-responsive">
       </div>
 
-      <div class="jumbotron">
+
         <img src="images/header2.jpg" alt="header" class="img-responsive">
-      </div>
       <div class="row">
 
       	<div class="col-md-6">
