--- a/public/product.html
+++ b/public/product.html
@@ -22,7 +22,7 @@
     <![endif]-->
 
 
-    <div class="container">
+    <div class="container" style="width: 730px important!;">
       <div class="header">
         <ul class="nav nav-pills pull-right">
           <li><a href="#">Home</a></li>
