--- a/public/product.html
+++ b/public/product.html
@@ -22,7 +22,7 @@
     <![endif]-->
 
 
-    <div class="container" style="width: 730px important!;">
+    <div class="container" style="width: 730px !important;">
       <div class="header">
         <ul class="nav nav-pills pull-right">
           <li><a href="#">Home</a></li>
@@ -65,7 +65,7 @@ De extra Home Kit garandeert een spatvrije reiniging van grote oppervlakken rond
       </div>
 
       <div class="footer">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+        <p><span class="glyphicon glyphicon-heart"></span><p><span class="glyphicon glyphicon-certificate"></span> Jan, Marjolaine & Julia </p></p>
       </div>
 
     </div>
