--- a/public/index.html
+++ b/public/index.html
@@ -84,7 +84,7 @@
       </div>
 
       <div class="footer">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+        <p><span class="glyphicon glyphicon-heart"></span><p><span class="glyphicon glyphicon-certificate"></span> Jan, Marjolaine & Julia </p></p>
       </div>
 
     </div>
