--- a/public/product.html
+++ b/public/product.html
@@ -65,7 +65,7 @@ De extra Home Kit garandeert een spatvrije reiniging van grote oppervlakken rond
       </div>
 
       <div class="footer">
-        <p><span class="glyphicon glyphicon-heart"></span><p><span class="glyphicon glyphicon-certificate"></span> Jan, Marjolaine & Julia </p></p>
+        <p><span class="glyphicon glyphicon-certificate"></span> Jan, Marjolaine & Julia</p>
       </div>
 
     </div>
