--- a/public/index.html
+++ b/public/index.html
@@ -25,8 +25,8 @@
     <div class="container">
       <div class="header">
         <ul class="nav nav-pills pull-right">
-          <li class="active"><a href="#">Home</a></li>
-          <li><a href="product.html">Product</a></li>
+          <li class="active knop"><a href="#">Home</a></li>
+          <li class="knop"><a href="product.html">Product</a></li>
         </ul>
         <img src="images/logo_2.png" alt="logo" />
       </div>
@@ -56,12 +56,11 @@
 		</div>
 	</div>
 	
-
-        </div>
-        
               <div class="footer">
         <p><span class="glyphicon glyphicon-certificate"></span> Jan, Marjolaine & Julia </p>
       </div>
+        </div>
+        
       </div>
 
 
