aanpassinen product pagina

--- a/public/product.html
+++ b/public/product.html
@@ -25,10 +25,10 @@
     <div class="container" style="width: 730px !important;">
       <div class="header">
         <ul class="nav nav-pills pull-right">
-          <li><a href="#">Home</a></li>
-          <li class="active"><a href="#">Product</a></li>
+          <li class="active knop"><a href="#">Home</a></li>
+          <li class="knop"><a href="product.html">Product</a></li>
         </ul>
-        <img src="images/logo_2.png" alt="logo" class="img-responsive">
+        <img src="images/logo_2.png" alt="logo" />
       </div>
 
 
