--- a/public/product.html
+++ b/public/product.html
@@ -5,7 +5,7 @@
     <title>prototyping sucks2</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
-    <link rel="shortcut icon" href="/favicon.ico">
+    <link rel="shortcut icon" href="https://d16m3dafbknje9.cloudfront.net/static/0f8ef07fc3b71ad7647a94742b0c23e380d7211a/_ui/desktop/theme-praxis/img/x1/favicon.ico">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
@@ -13,7 +13,7 @@
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="main.css">
     <!-- endbuild -->
   </head>
   <body>
@@ -22,7 +22,7 @@
     <![endif]-->
 
 
-    <div class="container" style="width: 730px !important;">
+    <div class="container">
       <div class="header">
         <ul class="nav nav-pills pull-right">
           <li class="active knop"><a href="#">Home</a></li>
