--- a/public/product.html
+++ b/public/product.html
@@ -25,16 +25,17 @@
     <div class="container">
       <div class="header">
         <ul class="nav nav-pills pull-right">
-          <li class="active knop"><a href="#">Home</a></li>
-          <li class="knop"><a href="product.html">Product</a></li>
+          <li class="knop"><a href="index.html">Home</a></li>
+          <li class="active knop"><a href="product.html">Product</a></li>
         </ul>
-        <img src="images/logo_2.png" alt="logo" />
+        <a href="index.html"><img src="images/logo_2.png" alt="logo" /></a>
       </div>
 
 
         <img src="images/header2.jpg" alt="header" class="img-responsive">
+      <h2>De Kärcher hogedrukreiniger</h2>
       <div class="row">
-
+		
       	<div class="col-md-6">
 			<img src="images/product1.jpg" alt="header" class="img-responsive afb">
 		</div>
