--- a/public/index.html
+++ b/public/index.html
@@ -25,10 +25,10 @@
     <div class="container">
       <div class="header">
         <ul class="nav nav-pills pull-right">
-          <li class="active knop"><a href="#">Home</a></li>
+          <li class="active knop"><a href="index.html">Home</a></li>
           <li class="knop"><a href="product.html">Product</a></li>
         </ul>
-        <img src="images/logo_2.png" alt="logo" />
+        <a href="index.html"><img src="images/logo_2.png" alt="logo" /></a>
       </div>
 
       <div>
@@ -37,22 +37,22 @@
 	<h1>Producten</h1>
 	<div class="row">
 		<div class="col-md-6">
-			<img src="images/product1.jpg" alt="header" class="img-responsive afb"/>
+			<a href="product.html"><img src="images/product1.jpg" alt="header" class="img-responsive afb"/></a>
 		</div>
 		
 		<div class="col-md-6">
-			<img src="images/product2.jpg" alt="header" class="img-responsive afb"/>
+			<a href="product.html"><img src="images/product2.jpg" alt="header" class="img-responsive afb"/></a>
 		</div>
 	</div>
 
 
 	<div class="row">
 		<div class="col-md-6">
-			<img src="images/product3.jpg" alt="header" class="img-responsive afb"/>
+			<a href="product.html"><img src="images/product3.jpg" alt="header" class="img-responsive afb"/></a>
 		</div>
 		
 		<div class="col-md-6">
-			<img src="images/product4.jpg" alt="header" class="img-responsive afb"/>
+			<a href="product.html"><img src="images/product4.jpg" alt="header" class="img-responsive afb"/></a>
 		</div>
 	</div>
 	
